--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/uewik">View on GitHub</a>
 
-          <h1 id="project_title">Uewik.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Welcome to Hao's homepage!</h1>
+          <h2 id="project_tagline">My homepage is under construction.</h2>
 
         </header>
     </div>
