--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Welcome to Hao's homepage!</title>
+    <title></title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/uewik">View on GitHub</a>
 
-          <h1 id="project_title"></h1>
+          <h1 id="project_title">Welcome to Hao's homepage!</h1>
           <h2 id="project_tagline">My homepage is under construction.</h2>
 
         </header>
